Added happy path to add user final
