# src/main/java/com/users/usermanaging/converter/UserSystemRequestToUserSystemDataDto.java
@@ -1,0 +1,18 @@
+package com.users.usermanaging.converter;
+
+import com.users.usermanaging.api.dto.UserSystemRequest;
+import com.users.usermanaging.dto.UserSystemDTO;
+import com.users.usermanaging.dto.UserSystemDataDto;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+import org.mapstruct.NullValuePropertyMappingStrategy;
+import org.mapstruct.ReportingPolicy;
+
+@Mapper(componentModel = "spring",
+        unmappedTargetPolicy = ReportingPolicy.IGNORE,
+        unexpectedValueMappingException = Exception.class,
+        nullValuePropertyMappingStrategy =  NullValuePropertyMappingStrategy.IGNORE)
+public interface UserSystemRequestToUserSystemDataDto {
+    UserSystemDTO convertToUserInfo(UserSystemRequest userSystemRequest);
+
+}
