# src/main/java/com/users/usermanaging/dto/UserSystemDataDto.java
@@ -5,14 +5,10 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 
-import java.util.ArrayList;
-
 @AllArgsConstructor
 @NoArgsConstructor
 @Getter
 @Setter
-public class UserSystemDTO {
-    public int id;
-    public ArrayList<UserInfoAddressDTO> address;
-    public String phone;
+public class UserSystemDataDto {
+    public UserSystemDTO userData;
 }
